--- a/sum-webgpu.html
+++ b/sum-webgpu.html
@@ -7,6 +7,8 @@
     <title>ML Browser GPU - Sum WebGPU</title>
   </head>
   <body>
+    <label>Min number of ints<select name="minCount"></select></label>
+    <label>Max number of ints<select name="maxCount"></select></label>
     <script type="module" src="/src/sum-webgpu.ts"></script>
   </body>
 </html>
