Bootstrap benchmark table

--- a/sum-webgpu.html
+++ b/sum-webgpu.html
@@ -18,6 +18,16 @@
       </select>
     </label>
     <button>Run</button>
+    <table>
+      <thead>
+        <tr>
+          <th></th>
+          <th>Number of ints</th>
+        </tr>
+        <tr></tr>
+      </thead>
+      <tbody></tbody>
+    </table>
     <script type="module" src="/src/sum-webgpu.ts"></script>
   </body>
 </html>
