Display GPU infos

--- a/sum-webgpu/index.html
+++ b/sum-webgpu/index.html
@@ -30,6 +30,12 @@
       </thead>
       <tbody></tbody>
     </table>
+    <footer>
+      <div class="gpu__detail gpu__vendor"><b>GPU vendor:</b><span></span></div>
+      <div class="gpu__detail gpu__architecture">
+        <b>GPU architecture:</b><span></span>
+      </div>
+    </footer>
     <script type="module" src="/src/sum-webgpu/index.ts"></script>
   </body>
 </html>
