Split sum benchmark into multiple files

--- a/sum/index.html
+++ b/sum/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ML Browser GPU - Sum WebGPU</title>
+    <title>ML Browser GPU - Sum</title>
   </head>
   <body>
     <header>
@@ -36,6 +36,6 @@
         <b>GPU architecture:</b><span></span>
       </div>
     </footer>
-    <script type="module" src="/src/sum-webgpu/index.ts"></script>
+    <script type="module" src="/src/sum"></script>
   </body>
 </html>
